# cvfa2-alpr-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt  streamlit_app.py
.github/workflows/: cd.yml  ci.yml  train-model.yml
configs/: default.yaml  zone_map.json
deployment/k8s/: api-deployment.yaml  dashboard-deployment.yaml  hpa.yaml
docs/: architecture.md  cloud_deployment_architecture.md  final_report_template.md  mlops.md  presentation_outline.md
monitoring/: prometheus.yml
scripts/: build_manifest_from_kaggle_datacluster.py  evaluate.py  infer_video.py  monitor_drift.py  prepare_data.py  train.py
src/: __init__.py  config.py
src/analytics/: __init__.py  drift.py  occupancy.py  storage.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/dashboard/: app.py
src/data/: __init__.py  augmentations.py  cv_localization.py  dataset.py  labels.py  schemas.py  split_dataset.py  verify_annotations.py
src/inference/: __init__.py  pipeline.py  postprocess.py  tracker.py
src/models/: __init__.py  cnn_backbone.py  detector.py  hybrid_alpr.py  recognizer.py  transformer_decoder.py
src/training/: __init__.py  losses.py  metrics.py  trainer.py
src/utils/: __init__.py  io.py  logging_utils.py  seed.py
tests/: test_cv_localization.py  test_metrics.py  test_postprocess.py
